Actions
Bug #10492
closedptsl: cast between incompatible function types
Start date:
2019-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/io/tty_pts.c:101:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())ptslwput, ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 74d419caec602f7f32a3bdea419b7f3155d3eebc
commit 74d419caec602f7f32a3bdea419b7f3155d3eebc Author: Toomas Soome <tsoome@me.com> Date: 2019-03-15T20:51:19.000Z 10492 ptsl: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions